# Gastos-Deputados-Brazil-IO

./: .gitignore  README.md  brasil_io.py  pyproject.toml
.github/workflows/: main.yml
scripts/: brasil_io.py
