[project]
name = "gastos-deputados-brazil-io"
version = "0.1.0"
description = "Gastos de deputados fornecidos pela Brazil IO"
authors = [
    {name = "Renan Marx",email = "renanmarx@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "certifi (>=2025.11.12,<2026.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
